<resources>
<string name="ccccc">815805551322–1i4hbpanba6u0jnlndfed4qmaiau47cu.apps.googleusercontent.com</string>
    <string name="facebook_app_id">331834980553836</string>
    <string name="fb_login_protocol_scheme">fb331834980553836</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">IFM</string>
    <string name="password">Password</string>
    <string name="string_password">Password</string>
    <string name="e_mail">E_mail</string>
    <string name="dfirstname">dfirstname</string>
    <string name="lastnamed">lastnamed</string>
    <string name="e_maildw">e_maildw</string>
    <string name="mobiled">mobiled</string>
    <string name="passwordd">passwordd</string>
    <string name="register">REGISTER</string>
    <string name="firstname">FIRSTNAME</string>
    <string name="lastname">LASTNAME</string>
    <string name="e_mailL">E-MAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="passwordL">PASSWORD</string>
    <string name="refral_if_any">REFRAL(if any)</string>
    <string name="name">NAME</string>
    <string name="rate_kg">RATE/KG</string>
    <string name="add_to_card">ADD TO CARD</string>
    <string name="e_maill">E-Mail</string>
    <string name="textview">TextView</string>
    <string name="namek">Name</string>
    <string name="ratek">Rate</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="kg">Kg</string>
    <string name="g">g</string>
    <string name="quantity">Quantity</string>
    <string name="gj">g</string>
    <string name="button">Button</string>
    <string name="buttone">Button</string>
    <string name="total">Total</string>
    <string name="gst_number_23aaxcs6363e1zz">gst_number_23aaxcs6363e1zz</string>
    <string name="gross_total">GROSS TOTAL:</string>
    <string name="discount">DISCOUNT:</string>
    <string name="net_total">NET TOTAL:</string>
    <string name="bill_is_inclusive_of_all_gst">BILL IS INCLUSIVE OF ALL GST</string>
    <string name="comments">COMMENTS</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="card_on_delivery">CARD ON DELIVERY</string>
    <string name="radio_button">radio button</string>
    <string name="mobile_number">MOBILE NUMBER:</string>
    <string name="pin_code">PIN CODE:</string>
    <string name="address">ADDRESS:</string>
    <string name="order">ORDER</string>
    <string name="quantitydd">QUANTITY</string>
    <string name="totalxx">TOTAL</string>
    <string name="confirm">CONFIRM</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="finalize">FINALIZE</string>
    <string name="imf55">imf55</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_activityxx">Map</string>
    <string name="title_activity_maps_activityuu">Map</string>
</resources>
