<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="" />

        <TextView
            android:id="@+id/textView3kk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="USERNAME:"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText6kk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText7i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mailL"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordL"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refral_if_any"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FF162369"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/editText110"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/imf55"
            tools:ignore="LabelFor" />


        <ProgressBar
            android:id="@+id/progressBarx"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="0dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#FF162369"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#CCCC00"
                android:textSize="24sp"
                android:text="@string/register" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>