<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#FF162369"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="DISCOUNT"
                android:textColor="#FF162369"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/totalxx"
                android:textColor="#FF162369"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/menlistv"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:background="#FF162369"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#CCCC00"
            android:textSize="24sp"
            android:text="@string/confirm" />
    </RelativeLayout>
</LinearLayout>