<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="130dp">

    <TextView
        android:id="@+id/textView164"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="1dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
      />

    <TextView
        android:id="@+id/textView174"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="#FF162369"
        android:textSize="18sp"
      />

    <TextView
        android:id="@+id/textView164x"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView174"
        android:gravity="center_vertical"
        android:text="XXX"
        android:textColor="#FF162369"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textView274"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/textView164"
        android:layout_toEndOf="@+id/textView174"
        android:layout_toStartOf="@+id/spinner5"
        android:gravity="center_vertical"
        android:text="@string/kg"
        android:textAlignment="center"
        android:textColor="#FF162369"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView284"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/spinner44"
        android:gravity="center_vertical"
        android:text="@string/g"
        android:textAlignment="center"
        android:textColor="#FF162369"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner44"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_below="@+id/textView274"
        android:layout_toEndOf="@+id/textView164x"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView284"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView174"
        android:background="#FF162369"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/add_to_cart"
        android:textColor="#CCCC00"
        android:textSize="18sp" />

</RelativeLayout>